compiler/tests/en/errors/compound_assign_immutable.salam
// EXPECT: E013
func main:
    x := 5
    x += 1
end
